Resume list style and button value fixed on ios

--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -296,6 +296,10 @@ main {
         padding-bottom: 30px;
     }
 
+    .ResumeListContainer {
+        list-style: none;
+    }
+
     .ResumeList {
         margin: 20px 40px;
         padding-bottom: 10px;
